--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="/FoodPlazaCollectionProject"/>
-	<classpathentry kind="lib" path="D:/coderjava/mysql-connector-java-8.0.19.rar.jar"/>
+	<classpathentry kind="lib" path="D:/core java project/mysql-connector-java-8.0.19.rar.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
